--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Courses</a>
                     </li>
-                    <!--
+
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#schedule">Schedule</a>
                     </li>
-                  -->
+
                     <li>
                         <a class="page-scroll" href="#team">Tutors</a>
                     </li>
@@ -218,7 +218,7 @@
                         	<img src="img/portfolio/marketing.png" class="img-responsive" alt="">
                         	<div class="mask">
                         		<h2>Instructor: Karthik</h2>
-                        		<p style="margin-top:-6px">As students approach high school, they have the opportunity in joining two of the biggest clubs high school clubs, DECA and FBLA. Both clubs are career oriented and focus on developing the future business leaders of the world in a competitive atmosphere. In order to thrive and get recognition in these clubs, it’s extremely important to build some knowledge in the field of business. This course will teach you how to understand the dynamics of marketing in a fun and engaging way. The course will be targeted towards those interested in learning about marketing, not just those interested in DECA and FBLA. </p>
+                        		<p style="margin-top:-6px">As students approach high school, they have the opportunity in joining two of the biggest clubs high school clubs, DECA and FBLA. Both clubs are career oriented and focus on developing the future business leaders of the world in a competitive atmosphere. In order to thrive and get recognition in these clubs, it’s extremely important to build some knowledge in the field of business. This course will teach you how to understand the dynamics of marketing in a fun and engaging way. The course will be targeted towards those interested in learning schedule marketing, not just those interested in DECA and FBLA. </p>
                         	</div>
                         </div>
 
@@ -267,7 +267,7 @@
                         	<div class="mask">
                         		<h2>Instructor: Kaushik</h2>
                           </br>
-                        		<p style="margin-top:-6px"> For almost every developer, understanding the logic and syntax of Java is a must. Afterall, Java is the world’s most popular programming language. It’s so popular, even 10 year old kids are jumping on the developing wagon! To stay ahead of the group, this course will take you through the unique Object-Oriented program, and teach you about abstraction, inheritance, and many other important concepts that are critical in ensuring success in future software development endeavors.</p>
+                        		<p style="margin-top:-6px"> For almost every developer, understanding the logic and syntax of Java is a must. Afterall, Java is the world’s most popular programming language. It’s so popular, even 10 year old kids are jumping on the developing wagon! To stay ahead of the group, this course will take you through the unique Object-Oriented program, and teach you schedule abstraction, inheritance, and many other important concepts that are critical in ensuring success in future software development endeavors.</p>
                         	</div>
                         </div>
 
@@ -342,17 +342,36 @@
                         <p class="text-muted">$7 per hour</p>
                     </div>
                 </div>
-
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#" class="portfolio-link" data-toggle="modal">
+                       <div class="view view-first">
+                          <img src="img/portfolio/java.png" class="img-responsive" alt="">
+                          <div class="mask">
+                            <h2>Instructors: Kaushik, Shiva, Karthik, Emil</h2>
+                          </br>
+                            <p style="margin-top:-6px"> A 1 on 1 Math tutoring session designed to provide help for students on specific homework problems and test preparation.</p>
+                          </div>
+                        </div>
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Math Help</h4>
+                        <p class="text-muted">$15 per hour</p>
+                    </div>
+                  </div>
             </div>
         </div>
     </section>
 
-    <!-- About Section
-    <section id="about">
+    <!-- schedule Section -->
+    <section id="schedule">
         <div class="container">
-            <div class="row">
+          <div class="col-lg-12 text-center">
+          <h2 class="section-heading">schedule</h2>
+          <h3 class="section-subheading text-muted">All courses begin on Monday, Jan. 23rd</h3>
+          <img src="img/portfolio/sched.png" alt="Schedule" style="width:1000px;height:500px;">
+            <!-- <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <h2 class="section-heading">schedule</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -361,7 +380,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/schedule/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -375,7 +394,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/schedule/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -389,7 +408,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/schedule/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -403,7 +422,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/schedule/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -424,10 +443,10 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
--->
+
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
@@ -571,7 +590,7 @@
 
 
     <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
+    <!-- Use the modals below to showcase details schedule your portfolio projects! -->
 
     <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
