--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Courses</h2>
-                    <h3 class="section-subheading text-muted">Below are the courses we'll be offering. Each course consists of 10 weekly hour-long classes. </br></br> Please sign up for courses by emailing us at karthik.ravikumar1999@gmail.com or text us at (408) 309-0106</h3>
+                    <h3 class="section-subheading text-muted">Below are the courses we'll be offering. Each course consists of 10 weekly hour-long classes. </br></br> Please sign up for courses by emailing us at tutoringheadstart@gmail.com or text us at (408) 309-0106</h3>
                 </div>
             </div>
             <div class="row">
@@ -367,7 +367,7 @@
         <div class="container">
           <div class="col-lg-12 text-center">
           <h2 class="section-heading">schedule</h2>
-          <h3 class="section-subheading text-muted">All courses begin on Monday, Jan. 23rd</h3>
+          <h3 class="section-subheading text-muted">Courses begin on Monday, Jan. 23rd</h3>
           <img src="img/portfolio/sched.png" alt="Schedule" style="width:1000px;height:500px;">
             <!-- <div class="row">
                 <div class="col-lg-12 text-center">
