--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Headstart Tutoring</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -338,14 +338,14 @@
 
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Film Study</h4>
+                        <h4>Film Production</h4>
                         <p class="text-muted">$7 per hour</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
                        <div class="view view-first">
-                          <img src="img/portfolio/java.png" class="img-responsive" alt="">
+                          <img src="img/portfolio/math.png" class="img-responsive" alt="">
                           <div class="mask">
                             <h2>Instructors: Kaushik, Shiva, Karthik, Emil</h2>
                           </br>
