--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
                        <div class="view view-first">
-                          <img src="img/portfolio/math.png" class="img-responsive" alt="">
+                          <img src="img/portfolio/math.jpg" class="img-responsive" alt="">
                           <div class="mask">
                             <h2>Instructors: Kaushik, Shiva, Karthik, Emil</h2>
                           </br>
