--- a/index.html
+++ b/index.html
@@ -329,16 +329,16 @@
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
                        <div class="view view-first">
-                        	<img src="img/portfolio/filmstudy.png" class="img-responsive" alt="">
+                        	<img src="img/portfolio/mic.png" class="img-responsive" alt="">
                         	<div class="mask">
                         		<h2>Instructors: Emil and Karthik </h2>
-                        		<p style="margin-top:-6px"> This course introduces students to the basics of film analysis, cinematic formal elements, genre, and narrative structure and helps students develop the skills to recognize, analyze, describe and enjoy film as an art and entertainment form. To understand how films are constructed to make meaning and engage audiences, students will be introduced to the basic “building blocks” and formal elements (narrative, mise-en-scene, cinematography, sound and editing) that make up the film as well as some fundamental principles of analysis, genre, style, performance and storytelling. </p>
+                        		<p style="margin-top:-6px"> This course will focus on to transform your child into an effective persuasive speaker. Throughout this course children will learn all about hand usage, eye contact, the speaker’s triangle, and much more. Basic communication is an action that all of us partake in our lives. Developing and mastering this basic skill can make your child into an adroit speaker and an effective leader. This course is also applicable in all field of study and throughout your child’s life. Taking this course will also teach your students how to write a professional and effective speech.</p>
                         	</div>
                         </div>
 
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Film Production</h4>
+                        <h4>Public Speaking</h4>
                         <p class="text-muted">$7 per hour</p>
                     </div>
                 </div>
