--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <li>
                         <a class="page-scroll" href="#team">Tutors</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a class="page-scroll" href="#signup">Sign Up</a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -515,10 +515,11 @@
 
 
 
-    <!-- Contact Section
+    <!-- Contact Section -->
     <section id="signup">
-        <div class="container">
-            <div class="row">
+      <div class="col-lg-12 text-center">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdD5TRTkj1y2Gew5J9tTip7r4AibWeRvZyd1Eq8cGnCLf01fA/viewform?embedded=true" width="1200" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            <!-- <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sign Up</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
@@ -556,10 +557,10 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
--->
+
     <footer>
         <div class="container">
             <div class="row">
